include/omid.h

#ifndef OMID_H
#define OMID_H

/* Warning, this file is autogenerated by cbindgen. Don't modify this manually. */

#include <stdarg.h>
#include <stdbool.h>
#include <stdint.h>
#include <stdlib.h>

#define OmidFlags_TOUCHED 1

#define OmidFlags_RAW_DATA 2

#define OmidFlags_DIRECTION 4

/**
 * Total serialized size of the UACT frame in bytes.
 */
#define UactFrame_FRAME_SIZE ((C * 4) + 8)

enum EventType
#if __STDC_VERSION__ >= 202311L
  : uint8_t
#endif // __STDC_VERSION__ >= 202311L
 {
  Unknown = 0,
  AbsoluteChange = 1,
  RelativeDelta = 2,
  KeyPress = 3,
  KeyRelease = 4,
  HapticFeedback = 5,
  VisualUpdate = 6,
  SystemHandshake = 7,
};
#if __STDC_VERSION__ >= 202311L
typedef enum EventType EventType;
#else
typedef uint8_t EventType;
#endif // __STDC_VERSION__ >= 202311L

typedef struct OmidFlags OmidFlags;

typedef struct OmidPacket {
  uint16_t object_id;
  uint8_t event_type;
  uint8_t flags;
  uint32_t payload;
} OmidPacket;




typedef struct TopologyDescriptor {
  uint16_t object_id;
  uint8_t object_type;
  uint16_t spatial_x;
  uint16_t spatial_y;
  uint8_t resolution;
} TopologyDescriptor;

typedef uintptr_t libc_pthread_t;

typedef struct cpu_set_t {
  uintptr_t bits[16];
} cpu_set_t;

#define EventType_RelativeChange RelativeDelta

struct OmidPacket omid_packet_new(uint16_t object_id,
                                  uint8_t event_type,
                                  uint8_t flags,
                                  uint32_t payload);

struct OmidPacket omid_packet_new_f32(uint16_t object_id,
                                      uint8_t event_type,
                                      uint8_t flags,
                                      float val);

struct OmidPacket omid_packet_new_i32(uint16_t object_id,
                                      uint8_t event_type,
                                      uint8_t flags,
                                      int32_t val);

struct OmidPacket omid_packet_new_u32(uint16_t object_id,
                                      uint8_t event_type,
                                      uint8_t flags,
                                      uint32_t val);

struct OmidPacket omid_packet_new_xy(uint16_t object_id,
                                     uint8_t event_type,
                                     uint8_t flags,
                                     uint16_t x,
                                     uint16_t y);

struct OmidPacket omid_packet_new_haptic(uint16_t object_id, uint8_t profile, float intensity);

struct OmidPacket omid_packet_new_adc12(uint16_t object_id,
                                        uint8_t event_type,
                                        uint8_t flags,
                                        uint16_t val);

struct OmidPacket omid_packet_new_adc16(uint16_t object_id,
                                        uint8_t event_type,
                                        uint8_t flags,
                                        uint16_t val);

struct OmidPacket omid_packet_from_bytes(const uint8_t *bytes);

void omid_packet_to_bytes(struct OmidPacket packet, uint8_t *out_bytes);

float omid_packet_payload_as_f32(struct OmidPacket packet);

int32_t omid_packet_payload_as_i32(struct OmidPacket packet);

uint32_t omid_packet_payload_as_u32(struct OmidPacket packet);

void omid_packet_payload_as_xy(struct OmidPacket packet, uint16_t *out_x, uint16_t *out_y);

uint16_t omid_packet_payload_as_adc12(struct OmidPacket packet);

uint16_t omid_packet_payload_as_adc16(struct OmidPacket packet);

float omid_packet_payload_as_normalized_f32(struct OmidPacket packet, uint8_t adc_bits);

float omid_packet_haptic_intensity(struct OmidPacket packet);

int32_t omid_packet_haptic_force_profile(struct OmidPacket packet);

uint8_t omid_flags_new(bool touched, bool raw_data, bool direction, uint8_t timer_delta);

bool omid_flags_is_touched(uint8_t flags);

bool omid_flags_is_raw_data(uint8_t flags);

bool omid_flags_direction(uint8_t flags);

uint8_t omid_flags_timer_delta(uint8_t flags);

struct TopologyDescriptor omid_topology_new(uint16_t object_id,
                                            uint8_t object_type,
                                            uint16_t spatial_x,
                                            uint16_t spatial_y,
                                            uint8_t resolution);

struct TopologyDescriptor omid_topology_from_bytes(const uint8_t *bytes);

void omid_topology_to_bytes(struct TopologyDescriptor desc, uint8_t *out_bytes);

extern libc_pthread_t pthread_self(void);

extern int pthread_setaffinity_np(libc_pthread_t thread,
                                  uintptr_t cpusetsize,
                                  const struct cpu_set_t *cpuset);

#endif  /* OMID_H */